# USA_Canada_public_data_oil_and_gas_01

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
.github/workflows/: ci.yml  deploy-pages.yml  refresh-canada.yml  refresh-data.yml
config/: README.md
config/aggregation/: custom-geography.json
config/display/: monthly-average-rate.json
config/geographies/: canada.json  usa.json
config/series/: canada.json  usa.json
docs/: architecture.md  canada-data.md  data-catalog.md  data-contract.md  forecasting-roadmap.md  geography.md  methodology.md  phase-1-scope.md  phase-2-usa-mvp.md  phase-3-refined-products.md  phase-4-usa-weekly-breadth.md  update-runbook.md
docs/adr/: 0001-static-pages-scheduled-pipeline.md  0002-canonical-and-revisions.md  0003-source-aware-geography.md  0004-precomputed-chart-assets.md  0005-registered-browser-region-combinations.md  0006-registered-monthly-average-rate-display.md  README.md
pipeline/energy_dashboard/: __init__.py  aggregation.py  analytics.py  canada_registry.py  cer.py  cli.py  contracts.py  eia.py  forecasting.py  fundamentals.py  geography.py  promotion.py  provider.py  rebuild.py  refresh.py  registry.py  statcan.py  statcan_refresh.py  statcan_registry.py  storage.py  validation.py
public/: 404.html
scripts/: bootstrap-phase3.ps1  create-route-entries.mjs
src/: App.tsx  main.tsx  styles.css
src/charts/: balanceModel.test.ts  balanceModel.ts  changeModel.test.ts  changeModel.ts  seasonalModel.test.ts  (+1 more)
(+3731 files in other folders)
